Fixed margin on smaller viewport

--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,7 @@ h2 {
   .column {
     flex: 50%;
     max-width: 50%;
+    margin: auto;
   }
 }
 
@@ -76,6 +77,7 @@ h2 {
   .column {
     flex: 100%;
     max-width: 100%;
+    margin: auto;
   }
 }
 
